@@ -4,7 +4,8 @@
 
 3.3 bertsioa
 ================
-- Open-tran bilaketa konbinatuetan integratu da.
+- Open-tran bilaketa konbinatuetan integratu da. (#67)
+- Hiztegi Batua zuzendu da Euskaltzaindiaren webgune berriaren kontsultak erakutsi ahal izateko. (#78) 
 
 3.2 bertsioa
 ================
